# diper_clone

./: CLAUDE.md  INTERFACE.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  setup.py
diper/: __init__.py  autocorrel.py  autocorrel_3d.py  autocorrel_nogaps.py  dir_ratio.py  init.py  make_charts.py  msd.py  plot_at_origin.py  sparse_data.py  speed.py  utils.py  vel_cor.py
docs/: diper_user_manual.md  usage_example.py
tests/: __init__.py  test_autocorrel.py  test_msd.py  test_utils.py
